<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_zs_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_background_image"
        android:layout_width="@dimen/margin_0"
        android:layout_height="@dimen/margin_0"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_place_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_4"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/iv_background_image"
        tools:text="Sample Title" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:paddingBottom="@dimen/margin_8"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/subtitle"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="Sample Title" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="4"
        android:text="@string/description"
        android:textSize="@dimen/text_size_12"
        android:paddingBottom="@dimen/margin_16"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Long Description With no seeming end " />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>