<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_message"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/margin_24"
            android:layout_height="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tv_message"
            app:layout_constraintEnd_toStartOf="@id/tv_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_message"
            app:shapeAppearanceOverlay="@style/circularImageView"
            app:strokeWidth="@dimen/margin_half" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/btn_action"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/btn_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:gravity="center"
            android:maxWidth="@dimen/margin_100"
            android:padding="@dimen/margin_2"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_12"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_message"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_message_layout">

        <TextView
            android:id="@+id/btn_action1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:gravity="end"
            android:maxWidth="@dimen/margin_200"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_action2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_action2"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_action1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>