<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_zs_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_left_banner_image"
        android:layout_width="@dimen/margin_0"
        android:layout_height="@dimen/margin_0"
        android:scaleType="fitXY"
        android:src="@drawable/ic_place_holder"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_banner_content_layout"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_banner_title"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="start"
            android:text="@string/title"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sample Title" />

        <TextView
            android:id="@+id/tv_banner_sub_title"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/subtitle"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_banner_title"
            tools:text="Sample Title" />

        <TextView
            android:id="@+id/tv_banner_desc"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_16"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="4"
            android:text="@string/description"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toTopOf="@+id/cl_button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_banner_sub_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Long Description With no seeming end " />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_button_layout"
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_banner_desc"
            app:layout_constraintVertical_bias="0.0">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <ImageView
        android:id="@+id/iv_right_banner_image"
        android:layout_width="@dimen/margin_0"
        android:layout_height="@dimen/margin_0"
        android:scaleType="fitXY"
        android:src="@drawable/ic_place_holder"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>